# pipe-cds

./: .gitignore  Cargo.toml  Dockerfile  README copy.md  README.md  configfile_example.json5  diesel.toml  requests.http
.github/workflows/: build-and-update-manifest.yaml
devops/: compile.sh  dap-computed-data.service  migrate.sh  restart_service.sh  status_service.sh
src/: configs.rs  main.rs  schema.rs
src/app_history/: compiler_queues.rs  dac_hist.rs  dal_hist.rs  dam_hist.rs  dma_hist.rs  dmt_hist.rs  dri_hist.rs  dut_hist.rs  energy_hist.rs  laager_hist.rs  mod.rs
src/compression/: common_func.rs  compiler_DAC.rs  compiler_DAL.rs  compiler_DAM.rs  compiler_DMA.rs  compiler_DMT.rs  compiler_DRI.rs  compiler_DUT.rs  compiler_common.rs  mod.rs
src/db/config/: dynamo.rs  mod.rs  postgres.rs
src/db/entities/: assets.rs  clients.rs  device_disponibility_hist.rs  devices_l1_totalization_hist.rs  disponibility_hist.rs  electric_circuits.rs  machines.rs  (+10 more)
src/external_api/: api_laager.rs  api_server.rs  mod.rs
src/models/: mod.rs
src/schedules/: device_disponibility.rs  devices.rs  devices_l1_totalization.rs  disponibility.rs  energy.rs  energy_efficiency.rs  last_device_telemetry_time.rs  mod.rs  scheduler.rs  waters.rs
src/telemetry_payloads/: circ_buffer.rs  dac_payload_json.rs  dac_telemetry.rs  dal_payload_json.rs  dal_telemetry.rs  dam_payload_json.rs  dam_telemetry.rs  dma_payload_json.rs  dma_telemetry.rs  dmt_payload_json.rs  dmt_telemety.rs  dri_telemetry.rs  dut_payload_json.rs  dut_telemetry.rs  mod.rs  parse_json_props.rs  telemetry_formats.rs
(+169 files in other folders)
