[package]
name = "computed-data-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.1", features = ["full"] }
serde_json = "1.0.120"
chrono = "0.4.38"
diesel = { version = "2.2.1", features = ["chrono", "numeric", "r2d2", "postgres", "64-column-tables"] }
serde = "1.0.204"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_credential = "0.48.0"
rust_decimal = { version = "1.35.0", features = ["serde-with-str", "db-diesel2-postgres"] }
rust_decimal_macros = "1.35.0"
serde_dynamo = { version = "4.2.14", features = ["rusoto_dynamodb+0_48"] }
json5 = "0.4.1"
serde_with = "3.9.0"
meval = "0.2.0"
actix-web = "4.8.0"
futures = "0.3.30"
